<resources>
    <string name="app_name">Healtikuy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_feature">Main Feature</string>
    <string name="home">Home</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="logout">Logout</string>
    <string name="exercise">Exercise</string>
    <string name="nutrition">Nutrition</string>
    <string name="sun_exposure">Sun Exposure</string>
    <string name="set_time">Set Time</string>
    <string name="time_not_set">Time is not set yet</string>
    <string name="complete">Complete</string>
    <string name="sub_header_drawer">Make yourself Healthy!</string>
    <string name="profile">Profile</string>
    <string name="store">Store</string>
    <string name="feature">Feature</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="already_a_user">Already a user?</string>
    <string name="username">Username</string>
    <string name="not_a_user">Not a user?</string>
    <string name="an_image_of_avatar">An image of avatar</string>
    <string name="image_of_water">Image of water</string>
    <string name="image_of_sleep_person">Image of sleep person</string>
    <string name="image_of_exercise">image of exercise</string>
    <string name="image_of_nutrition">image of nutrition</string>
    <string name="image_of_sun_exposure">image of sun exposure</string>
    <string name="challenges">Challenges</string>
    <string name="image_of_coin">Image of coin</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="submit">Submit</string>
    <string name="description_when_time_not_set">Setting the time will provide you a notification and will fire everyday within your schedule. You can disable this in app > notification settings.</string>
    <string name="button_for_complete_sleep_mission">button for complete sleep mission</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Modal Related -->
    <string name="are_you_sure">Are you sure?</string>
    <string name="local_sync_is_sure">Local sync means uploading all your local data to the server. This has done automatically every day. Continue?</string>
    <string name="cloud_sync_is_sure">Cloud sync means replacing all your local data from the server. Continue?</string>

    <!-- Home Related -->
    <string name="status_points">Points : %d / %d</string>
    <string name="status_low">Cheers up! It was never too late to change your life!</string>
    <string name="status_mid">You are in the middle of your journey! You can do this!</string>
    <string name="status_near_complete">Your journey is near to success! Keep it up!</string>
    <string name="status_completed">Congratulation! You\'ve implemented a Healthy Lifestyle. Keep it up! </string>
    <string name="ways_to_healthy">Ways to Improve your Health</string>


    <!-- Water Related -->
    <string name="water_intake">Water Intake</string>
    <string name="number_of_glass_of_water_you_drink">number of glass of water you drink</string>
    <string name="water_intake_low">You need at least 8 glass everyday</string>
    <string name="water_intake_enough">Nice! you\'ve enough water for today!</string>
    <string name="water_intake_glass_left">%d Glass left</string>

    <!-- Sleep Related -->
    <string name="sleep">Sleep</string>
    <string name="sleep_description_after_complete">Make Sure to turn off your phone. Happy Sleep!</string>
    <string name="sleep_description_before_sleep">Make sure you have turn off your phone after pressing the button!</string>
    <string name="sleep_description_not_in_time">You can complete this mission in within 1 hours of your sleep schedule.</string>

    <!-- SunExposure Related -->
    <string name="sunbathe">Sunbathe</string>
    <string name="sun_desc_after_complete"> Good Job! At least you have daily vitamin D Needs! Keep it up! </string>
    <string name="sun_desc_before_press"> Make sure you have receive sunlight exposure or sunbathe this day. </string>
    <string name="sun_desc_not_in_time"> You can complete this mission in within 1 hours of your Sun Exposure schedule.</string>
    <string name="sun_tips_home">Sunbathe is best doing in between 10.00 &#8211; 15.00, with 5 &#8211; 15 Minutes Duration. Sunbathe is not strictly necessary, the important thing is you have receive sunlight exposure.</string>

    <!-- Exercise Related -->
    <string name="cardio">Cardio</string>
    <string name="jogging">Jogging</string>
    <string name="running">Running</string>
    <string name="icon_of_exercise">icon of exercise</string>
    <string name="set_your_schedule">Set Your Schedule!</string>
    <string name="intervalcolon">Interval : </string>
    <string name="days">Days</string>
    <string name="edit">Edit</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="time">Time :</string>
    <string name="not_set">Not Set</string>
    <string name="durationcolon">Duration :</string>
    <string name="mileagecolon">Mileage :</string>
    <string name="minutes">Minutes</string>
    <string name="meter">Meter</string>
    <string name="history">History</string>
    <string name="clear_history">Clear History</string>
    <string name="inventory">Inventory</string>
    <string name="no_data">There is still no data.</string>
    <string name="seconds">Seconds</string>
    <string name="setcolon">Set :</string>
    <string name="rest_time_colon">Rest Time :</string>
    <string name="set">Set</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="local_sync">Local Sync</string>
    <string name="cloud_sync">Cloud Sync</string>
    <string name="button_for_complete_sunfire_feature">button for complete sunfire feature</string>
    <string name="more_tips">More Tips</string>
    <string name="did_you_know">Did you know?</string>
    <string name="fill_duration_in_minutes">fill duration in minutes</string>
    <string name="track_your_record">Track your record</string>
    <string name="example_exercise_small_number">60</string>
    <string name="example_exercise_medium_number">120</string>
    <string name="example_exercise_large_number">180</string>
    <string name="got_point_template">You got %d Points!</string>
    <string name="get_tips">Get Tips</string>
    <string name="tips">Tips</string>
    <string name="drink_1_glass">Drink 1 glass</string>
    <string name="store_is_empty">Store is empty</string>
    <string name="food_name">Food Name</string>
    <string name="category">Category</string>
    <string name="vegetables">vegetables</string>
    <string name="running_leaderboards">Running Leaderboards</string>
    <string name="fastest_person">Fastest Person</string>
    <string name="no_data_recorded">No data recorded.</string>
    <string name="highest_points">Highest Points</string>
    <string name="check_another">Check Another</string>

    <!-- Nutrition Related -->
    <string name="nutrition_tips">There are 3 different things we must avoid eating too much : sugar, salt, and saturated fat.</string>
    <string name="image_of_app_logo">image of app logo</string>

    <!-- Other related -->
    <string name="guidance">Guidance</string>
    <string name="about">About</string>
    <string name="about_expectation">
        Healtikuy purpose was to help you to achieve your goals, in terms of a Healthy Lifestyle.
        The developer aspires for this application to facilitate the cultivation of beneficial habits for users.
        Once the habit has been successfully established, it\'s okay to remove this app.
    </string>
    <string name="about_special_thanks">Freepik, Flaticon, Icons8, Material Icon, for providing a free assets for this app.</string>
    <string name="special_thanks_to">Special thanks to :</string>
    <string name="expectation">Expectation</string>
    <string name="guide_feature_sleep">To complete the mission, you should follow the description text. In this feature (sleep), you should set the time first and you should click the button to complete the mission if the time is within 1 hours with your schedule.</string>
    <string name="feature_example">Feature Example</string>
    <string name="guide_user_attributes">There are user attributes such as points, coin, and another. Point is the indicator that if you have reach a healthy lifestyle or not, and points is working together with progress bar. Full Progress Bar, means you reach the goals (healthy lifestyle). There\'s also a coin, to purchase an avatar in the store.\nYou can get the points by completing each mission in main feature. And the points is different for each feature. \nFor coin, you can get it in challenges, and when you have reach the goals (you get it per day).</string>
    <string name="user_attributes">User Attributes</string>
    <string name="guide_main_features">There\'s exactly 5 main feature to help you promotes your health. You aren\'t necessary doing all of that if you dont want to. You can choose what you like. However, if you can do all of that, it\'s good.</string>
    <string name="features">Features</string>
    <string name="about_apps">Why this app named \'healtikuy\'? It was actually from indonesia jargon and english words, and Kuy just means like \'Lets go!\'. So this app means Healthy + Kuy = Let\'s be healthy!</string>
    <string name="about_title">About this app</string>
    <string name="system">System</string>
    <string name="about_system">Your progress will reset every day, and will be recorded in your history. And there\'s a punishment system, that is if you not doing any 1 features in 2 days streak, your point will be reduced by 1000 each day</string>
    <string name="privacy">About Privacy</string>
    <string name="about_privacy">Everything inside the 5 main feature uses a local database, and never be uploaded to cloud database. That\'s why if you logged out your account or uninstalled it, your main feature will be lost. However, the points, coin, and other thing beside the main feature, will be uploaded to cloud database. Also, if you want your account deleted, just contact the developer that listed in playstore.</string>
    <string name="other">Other</string>
    <string name="login_streak">Login Streak</string>
    <string name="daily_log_in_streak">Daily Log-in Streak:</string>
    <string name="bonus_coin_d">Bonus Coin : %d</string>
    <string name="how_to_get_coin">How to get coin?</string>
    <string name="about_get_coin">You can get your coin by either daily-login or complete challenges. Daily login reward will be doubled in every 3 days, and for the starter is 8 Coin.</string>
    <string name="im_not_smoking_today">Im not smoking Today</string>
    <string name="im_not_drinking_alcohol_today">Im not Drinking Alcohol Today</string>
    <string name="tips_avoid">Alcohol and smoking are examples of things that we need to avoid. These two factors can have serious long-term effects on your body. It is advisable to avoid them at all costs. And if you have never tried them before, it is best not to experiment with them.</string>
    <string name="i_ve_never_done_any_of_those_things">I\'ve never done any of those things</string>
    <string name="avoid_these">Avoid These</string>
    <string name="information">Information</string>
    <string name="checkable_after_9pm">checkable after 9PM</string>
    <string name="i_limit_sugar_consumption_today">I limit sugar consumption today.</string>
    <string name="i_limit_fatty_foods_today">I limit fatty foods today.</string>
    <string name="add_food">Add Food</string>


</resources>