<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.other.AboutFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">


        <TextView
            style="@style/textGuide.title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_title" />

        <TextView
            style="@style/textGuide.body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_apps" />

        <TextView
            style="@style/textGuide.title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expectation" />

        <TextView
            style="@style/textGuide.body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_expectation" />

        <TextView
            style="@style/textGuide.title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/special_thanks_to" />

        <TextView
            style="@style/textGuide.body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_special_thanks" />


    </LinearLayout>


</LinearLayout>