<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navgraph_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.kocci.healtikuy.ui.main.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_homeFragment_to_waterIntakeFragment"
            app:destination="@id/waterIntakeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_sunExposureFragment"
            app:destination="@id/sunExposureFragment" />
        <action
            android:id="@+id/action_homeFragment_to_exerciseFragment"
            app:destination="@id/exerciseFragment" />
        <action
            android:id="@+id/action_homeFragment_to_sleepFragment"
            app:destination="@id/sleepFragment" />
        <action
            android:id="@+id/action_homeFragment_to_nutritionFragment"
            app:destination="@id/nutritionFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.kocci.healtikuy.ui.auth.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/waterIntakeFragment"
        android:name="com.kocci.healtikuy.ui.main.feature.WaterIntakeFragment"
        android:label="@string/water_intake"
        tools:layout="@layout/fragment_water_intake" />
    <fragment
        android:id="@+id/sunExposureFragment"
        android:name="com.kocci.healtikuy.ui.main.feature.SunExposureFragment"
        android:label="@string/sun_exposure"
        tools:layout="@layout/fragment_sun_exposure" />
    <fragment
        android:id="@+id/exerciseFragment"
        android:name="com.kocci.healtikuy.ui.main.feature.ExerciseFragment"
        android:label="@string/exercise"
        tools:layout="@layout/fragment_exercise" />
    <fragment
        android:id="@+id/sleepFragment"
        android:name="com.kocci.healtikuy.ui.main.feature.SleepFragment"
        android:label="@string/sleep"
        tools:layout="@layout/fragment_sleep" />
    <fragment
        android:id="@+id/nutritionFragment"
        android:name="com.kocci.healtikuy.ui.main.feature.NutritionFragment"
        android:label="@string/nutrition"
        tools:layout="@layout/fragment_nutrition" />
</navigation>