<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.profile.edit.EditProfileFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ImageView
        android:id="@+id/imgAvatarEditProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/an_image_of_avatar"
        android:src="@drawable/popeye"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarEditProfile" />

    <Button
        android:id="@+id/btnChangeAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/change_avatar"
        app:layout_constraintBottom_toBottomOf="@id/imgAvatarEditProfile"
        app:layout_constraintStart_toEndOf="@id/imgAvatarEditProfile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilUsernameEditProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/username"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgAvatarEditProfile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsernameEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/ilUsernameEditProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>